Refactor extensions + Sloth IR of SLOs
